Added CheckDB Handlers, Check Adapter, CreateCheckActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,14 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
+        <activity
+            android:name=".CreateCheckActivity"
+            android:label="@string/title_activity_create_check" />
+
+        <provider
+            android:authorities="com.android.splitcheck.data.CheckContract"
+            android:name=".data.CheckContentProvider"
+            android:exported="false" />
     </application>
 
 </manifest>
