--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:11.0.2'
     compile 'com.android.support:preference-v7:25.3.1'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
