--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.android.splitcheck"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -30,6 +30,14 @@ android {
             signingConfig signingConfigs.config
         }
     }
+    productFlavors {
+        paid {
+            applicationId 'com.android.splitcheck'
+        }
+        free {
+            applicationId 'com.android.splitcheck'
+        }
+    }
 }
 
 dependencies {
@@ -42,13 +50,17 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
-    compile 'com.google.android.gms:play-services-auth:11.0.2'
-    compile 'com.google.android.gms:play-services-ads:11.0.2'
+    compile 'com.google.android.gms:play-services-auth:11.0.4'
+    compile('com.google.api-client:google-api-client-android:1.17.0-rc') {
+        exclude module: 'httpclient'
+    }
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile 'com.android.support:preference-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-
     compile 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    freeCompile 'com.google.android.gms:play-services-ads:11.0.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
