--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/imageicon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/imageicon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".CheckListActivity">
@@ -23,7 +23,14 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login" />
+            android:label="@string/title_activity_login"
+            android:launchMode="singleTop"
+            android:parentActivityName=".CheckListActivity" />
+
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".CheckListActivity" />
+
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
@@ -35,37 +42,49 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".CheckListActivity" />
         </activity>
+        <activity android:name=".ParticipantsActivity"
+            android:launchMode="singleTop"
+            android:label="@string/title_activity_participants"
+            android:parentActivityName=".CheckDetailActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".CheckDetailActivity" />
+        </activity>
 
         <provider
-            android:authorities="com.android.splitcheck.data.CheckContract"
             android:name=".data.CheckContentProvider"
+            android:authorities="com.android.splitcheck.data.CheckContract"
             android:exported="false" />
-
         <provider
-            android:authorities="com.android.splitcheck.data.ItemContract"
             android:name=".data.ItemContentProvider"
+            android:authorities="com.android.splitcheck.data.ItemContract"
             android:exported="false" />
-
         <provider
-            android:authorities="com.android.splitcheck.data.ParticipantContract"
             android:name=".data.ParticipantContentProvider"
+            android:authorities="com.android.splitcheck.data.ParticipantContract"
             android:exported="false" />
-
         <provider
-            android:authorities="com.android.splitcheck.data.CheckParticipantContract"
             android:name=".data.CheckParticipantContentProvider"
+            android:authorities="com.android.splitcheck.data.CheckParticipantContract"
+            android:exported="false" />
+        <provider
+            android:name=".data.ModifierContentProvider"
+            android:authorities="com.android.splitcheck.data.ModifierContract"
+            android:exported="false" />
+        <provider
+            android:name=".data.ItemParticipantContentProvider"
+            android:authorities="com.android.splitcheck.data.ItemParticipantContract"
             android:exported="false" />
 
-        <provider
-            android:authorities="com.android.splitcheck.data.ModifierContract"
-            android:name=".data.ModifierContentProvider"
-            android:exported="false"/>
+        <receiver android:name=".CheckWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
 
-        <provider
-            android:authorities="com.android.splitcheck.data.ItemParticipantContract"
-            android:name=".data.ItemParticipantContentProvider"
-            android:exported="false"/>
-
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/check_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
